--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,14 @@
     width: 40%;
     margin: 0 auto;
 }
+
+#articles {
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+}
+
+.article {
+    border: 2px solid blue;
+    width: 20%;
+}
