--- a/views/index.html
+++ b/views/index.html
@@ -15,17 +15,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" defer
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
-    <script src="/js/main.js" type="text/javascript" defer></script>
-    <script src="/js/fb.js" type="text/javascript" defer></script>
-    
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="/js/main.js" type="text/javascript" defer></script>
+  <script src="/js/fb.js" type="text/javascript" defer></script>
+
 
 
   <title>Reko-ring</title>
 </head>
 
 <body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v13.0&appId=2835260340101626&autoLogAppEvents=1"
+    nonce="fdUoR2CN"></script>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -61,12 +66,12 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">
-            Search
-          </button>
-        </form>
+        <div class="fb-login-button" data-width="" data-size="large" data-button-type="login_with" data-layout="rounded"
+          data-auto-logout-link="false" data-use-continue-as="true">
+        </div>
+        <div id="logoutBtn" style="display: none;">
+          <button onclick="facebookLogout()">logout</button>
+        </div>
       </div>
     </div>
   </nav>
@@ -75,13 +80,14 @@
     <div class="addProduct red">
       <div class="mb-3">
         <label for="descriptionText" class="form-label">Valfri beskrivande text</label>
-        <textarea class="form-control" id="description" rows="3" placeholder="Växjös Djurgård..." name="description"></textarea>
+        <textarea class="form-control" id="description" rows="3" placeholder="Växjös Djurgård..."
+          name="description"></textarea>
       </div>
 
       <div class="row">
         <div class="col-md-8">
           <label for="productNamn" class="form-label">Produkt namn</label>
-          <input type="text" class="form-control" id="product" placeholder="Vita ägg..." name="product"/>
+          <input type="text" class="form-control" id="product" placeholder="Vita ägg..." name="product" />
         </div>
 
         <div class="col-md-4">
@@ -96,9 +102,7 @@
 
 
   <!-- DATABASE INFORMATION GETS DISPLAYED HERE -->
-<div id="articles"></div>
-
-  
+  <div id="articles"></div>
 </body>
 
 </html>
