--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,18 @@
 .info ul li span {
     padding-right: 25px;
 }
+
+.comment p {
+    border: 2px solid rgb(17, 0, 255);
+    border-radius: 30px;
+    padding: 10px;
+}
+
+.replie {
+    width: 80%;
+    margin-left: auto;
+}
+
+.comment {
+    border-bottom: 2px solid green;
+}
