--- a/views/index.html
+++ b/views/index.html
@@ -20,17 +20,26 @@
   <script src="/js/main.js" type="text/javascript" defer></script>
   <script src="/js/fb.js" type="text/javascript" defer></script>
 
-
-
   <title>Reko-ring</title>
+  <link rel="icon" type="image/x-icon" href="pics/logo-nobgfavic.png">
+
 </head>
 
 <body>
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v13.0&appId=2835260340101626&autoLogAppEvents=1"
-    nonce="fdUoR2CN"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v13.0&appId=2835260340101626&autoLogAppEvents=1" nonce="fdUoR2CN"></script>
 
+    <div id="login-popup">
+      <div id="welcome-text" class="mb-3">
+        <h3>Välkommen till Reko-rings administrationspanel</h3>
+        <img src="pics/logo-nobg100.png" alt="reko-ring logo">
+      </div>
+      <div class="fb-login-button" data-width="" data-size="large" data-button-type="login_with" data-layout="rounded"
+        data-auto-logout-link="false" data-use-continue-as="true" onlogin='window.location="/";'>
+      </div>
+    </div>
+
+    <main class="is_blurred">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -66,9 +75,6 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <div class="fb-login-button" data-width="" data-size="large" data-button-type="login_with" data-layout="rounded"
-          data-auto-logout-link="false" data-use-continue-as="true">
-        </div>
         <div id="logoutBtn" style="display: none;">
           <button onclick="facebookLogout()">logout</button>
         </div>
@@ -76,6 +82,7 @@
     </div>
   </nav>
 
+  
   <form action="/create-article" method="POST">
     <div class="addProduct red">
       <div class="mb-3">
@@ -99,10 +106,8 @@
       <input type="submit" id="submitArticle" class="mt-3" />
     </div>
   </form>
-
+  
 
   <!-- DATABASE INFORMATION GETS DISPLAYED HERE -->
   <div id="articles"></div>
-</body>
-
-</html>
+  <iframe src="http://www.facebook.com/plugins/comments.php?href=http://techcrunch.com/2014/09/17/life-is-tough/" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:3806px;" allowTransparency="true"></iframe></html>
