--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,41 +2,6 @@
     border: 2px solid red;
 }
 
-.addProduct{
-    width: 40%;
-    margin: 0 auto;
-}
-
-#articles {
-    border: 2px solid red;
-    display: flex;
-    justify-content: space-between;
-}
-
-.article {
-    border: 2px solid blue;
-    width: 20%;
-}
-
-.info ul li span {
-    padding-right: 25px;
-}
-
-.comment p {
-    border: 2px solid rgb(17, 0, 255);
-    border-radius: 30px;
-    padding: 10px;
-}
-
-.replie {
-    width: 80%;
-    margin-left: auto;
-}
-
-.comment {
-    border-bottom: 2px solid green;
-}
-
 #login-popup {
     border: 2px solid black;
     width: 30%;
@@ -60,4 +25,50 @@
     filter: blur(5px);
     -webkit-filter: blur(2px);
     pointer-events: none;
+}
+
+nav {
+    border-bottom: 1px solid black;
+}
+
+/* ------------- ARTICLES -------------- */
+
+
+.addArticle{
+    width: 40%;
+    margin: 0 auto;
+    padding:25px;
+}
+
+#articles {
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-around;
+}
+
+.article {
+    border: 2px solid blue;
+    width: 20%;
+    text-align: center;
+}
+
+/* ------------- Create.HTML -------------- */
+.smallText {
+    font-size: 12px;
+    font-style: italic;
+}
+
+
+#addMoreProducts {
+    border: 2px solid black;
+    width: fit-content;
+    padding: 0px 3px;
+    margin: 15px auto 0px auto;
+    cursor: pointer;
+}
+
+.addProduct {
+    border: 1px solid black;
+    padding: 5px;
+    margin-bottom: 10px;
 }
