--- a/views/farm.html
+++ b/views/farm.html
@@ -53,16 +53,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./myOrders.html">Mina orders</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Admin
+                Producent
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/create.html">Skapa artikel</a></li>
-                <li><a class="dropdown-item" href="/archive.html">Arkiv</a></li>
+                <li><a class="dropdown-item" href="./profil.html">Redigera Profil</a></li>
+                <li><a class="dropdown-item" href="./create.html">Skapa artikel</a></li>
+                <li><a class="dropdown-item" href="./farmOrders.html">Beställningar</a></li>
               </ul>
             </li>
           </ul>
@@ -90,7 +94,7 @@
         <div id="products" class="col-md-auto"></div>
       </div>
     </div>
-
+  </main>
 </html>
 
 
