--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,18 +42,16 @@ nav {
 
 #articles {
     display: flex;
-    justify-content:center;
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 80%;
     margin: 0 auto;
 }
 
 .article {
-    border: 2px solid blue;
-    width: 20%;
-    margin-right: 20px;
-    text-align: center;
+    margin-bottom: 25px;
 }
+
 
 /* ------------- Create.HTML -------------- */
 .smallText {
@@ -91,11 +89,124 @@ nav {
     border-bottom: 1px solid rgb(187, 187, 187);
 }
 
-#cartSubmit {
-    border: 1px solid red;
-    width: 20%;
-    margin: 0 0 0 auto;
+#submitInfo {
+    width: fit-content;
+    margin: 0 0 0 auto !important;
+}
+
+.articleImg {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* -------------- myOrders.html ----------------*/
+
+.oneOrder {
+    width: fit-content;
+    max-width: 300px;
+    margin-bottom: 50px;
+    padding: 15px;
+    border: 2px solid black;
+}
+
+.pending .status{
+    margin-top: 5px;
+    background: rgb(255, 255, 0);
+    border-radius: 15%;
+}
+.cancelled .status {
+    background: rgb(255, 0, 0);
+    border-radius: 15%;
+    margin-top: 5px;
+
+
+}
+.accepted .status{
+    background: rgb(0, 255, 0);
+    border-radius: 15%;
+    margin-top: 5px;
 }
 
 
-/* -------------- myOrders.html ----------------*/
+.item {
+    border-bottom: 1px solid rgb(187, 187, 187);
+    height: fit-content;
+}
+
+#activeOrders {
+    min-width: 100%;
+}
+
+.orders {
+    width: 60%;
+    border-bottom: 1px solid rgb(187, 187, 187);
+}
+
+.orderStatus {
+    margin: auto 0 0 0;
+    font-size: 14px;
+}
+
+.orderStatus span { 
+    background: white;
+    z-index: 2;
+    margin-bottom: -30px;
+    padding: 0 6px;
+    font-style: italic;
+}
+
+.orderPrice span {
+    font-style: italic;
+}
+
+.cartImg {
+    max-width: 70% !important;
+    vertical-align: baseline;
+}
+
+/* -------------- profil.html ----------------*/
+
+#submitProfile {
+    width: fit-content;
+    margin: 0 0 0 auto;
+}
+
+.article {
+    max-width: 400px;
+    max-height: 250px;
+    position: relative;
+    text-align: center;
+
+}
+.article img{
+    max-width: 100%;
+max-height: 100%;
+    height: auto;
+    width: auto;
+    z-index: -1;
+    box-sizing: border-box;
+
+}
+
+.article .cardOverlay {
+    position: absolute;
+    top: 0;
+    left:0;
+    z-index: 1;
+    min-height: 100%;
+    min-width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0,0.6);
+}
+
+
+/* -------------- farmOrders.html ----------------*/
+
+.oneFarmOrder {
+    max-width: 400px !important;
+}
