--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v13.0&appId=2835260340101626&autoLogAppEvents=1"
-    nonce="fdUoR2CN"></script>
+    nonce="fdUoR2CN" target="_top"></script>
 
   <div id="login-popup">
     <div id="welcome-text" class="mb-3">
@@ -45,7 +45,7 @@
   <main class="is_blurred">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/"><img src="pics/logo-nobg100.png" alt="Reko-ring logo"></a>
+        <a class="navbar-brand" href="#"><img src="pics/logo-nobg100.png" alt="Reko-ring logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,16 +53,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./myOrders.html">Mina orders</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Admin
+                Producent
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/create.html">Skapa artikel</a></li>
-                <li><a class="dropdown-item" href="/archive.html">Arkiv</a></li>
+                <li><a class="dropdown-item" href="./profil.html">Redigera Profil</a></li>
+                <li><a class="dropdown-item" href="./create.html">Skapa artikel</a></li>
+                <li><a class="dropdown-item" href="./farmOrders.html">Beställningar</a></li>
               </ul>
             </li>
           </ul>
@@ -79,5 +83,5 @@
 
     <!-- DATABASE INFORMATION GETS DISPLAYED HERE -->
     <div id="articles"></div>
-
+  </main>
 </html>
