--- a/views/myOrders.html
+++ b/views/myOrders.html
@@ -53,16 +53,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="./index.html">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./myOrders.html">Mina orders</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Admin
+                Producent
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/create.html">Skapa artikel</a></li>
-                <li><a class="dropdown-item" href="/archive.html">Arkiv</a></li>
+                <li><a class="dropdown-item" href="./profil.html">Redigera Profil</a></li>
+                <li><a class="dropdown-item" href="./create.html">Skapa artikel</a></li>
+                <li><a class="dropdown-item" href="./farmOrders.html">Beställningar</a></li>
               </ul>
             </li>
           </ul>
@@ -80,17 +84,22 @@
       </div>
     </nav>
 
-    <div class="d-flex flex-column align-items-center red">
-      <div>
-        <h3>Mina aktiva orders:</h3>
-        <div class="d-flex flex-row" id="activeOrders"></div>
+    <div class="d-flex flex-column align-items-center">
+      <div class="d-flex flex-column align-items-center orders">
+        <h3>Aktiva orders, väntar på svar:</h3>
+        <div class="d-flex flex-row justify-content-evenly flex-wrap" id="activeOrders"></div>
       </div>
 
-      <div>
-        <h3>Äldre ordrar:</h3>
-        <div class="d-flex flex-row" id="oldOrders"></div>
+      <div class="d-flex flex-column align-items-center orders">
+        <h3>Accepterade ordrar</h3>
+        <div class="d-flex flex-row justify-content-evenly" id="oldOrders"></div>
       </div>
-      
+
+      <div class="d-flex flex-column align-items-center orders">
+        <h3>Avissade orders</h3>
+        <div class="d-flex flex-row justify-content-evenly" id="canceledOrders"></div>
+      </div>
+
     </div>
-
+  </main>
 </html>
